--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ julia:
   - 1.1
   - nightly
 
+env:
+  - PYTHON="Conda"
+
 ## uncomment the following lines to allow failures on nightly julia
 ## (tests will run but not make your overall status red)
 #matrix:
@@ -30,7 +33,7 @@ after_success:
 jobs:
   include:
     - stage: "Documentation"
-      julia: 1.0
+      julia: 1.1
       os: linux
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
