--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,19 @@
 name = "UpROOT"
 uuid = "69ce31c6-c38d-56c2-aa87-409d3de9f997"
+version = "0.1.0"
 
 [deps]
 ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
-PyCall = ">=1.90.0"
+julia = "1"
+ArraysOfArrays = ">= 0.3.0"
+PyCall = ">= 1.90.0"
+Tables = ">= 0.1.12"
+TypedTables = ">= 1.1.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
