--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,7 @@ environment:
   matrix:
   - julia_version: 1.0
   - julia_version: 1.1
-  - julia_version: nightly
+  # - julia_version: nightly
 
 platform:
   - x86 # 32-bit
