--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,26 @@ language: julia
 os:
   - linux
   - osx
+  - windows
 
 julia:
   - 1.0
-  - 1.1
-  # - nightly
+  - 1.3
+  - nightly
 
 env:
   - PYTHON="Conda"
 
-## uncomment the following lines to allow failures on nightly julia
-## (tests will run but not make your overall status red)
-#matrix:
-#  allow_failures:
-#    - julia: nightly
-#  fast_finish: true
+arch:
+  - amd64
+  # - x86 # Python uproot package is not available on x86
+
+branches:
+  only:
+    - master
+    - dev
+    - /^release-.*$/
+    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
 
 notifications:
   email: false
@@ -31,10 +36,19 @@ after_success:
   - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
 
 jobs:
+  #allow_failures:
+  #  - julia: nightly
+  #fast_finish: true
+  exclude:
+    - os: osx
+      arch: x86
+    - os: windows
+      arch: x86
   include:
     - stage: "Documentation"
-      julia: 1.1
+      julia: 1.0
       os: linux
+      arch: amd64
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
