--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 julia = "1"
 ArraysOfArrays = "0.3, 0.4"
 PyCall = "1.9"
-Tables = "0.2"
+Tables = "0.2, 1"
 TypedTables = "1.1"
 
 [extras]
