--- a/Project.toml
+++ b/Project.toml
@@ -12,8 +12,8 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 julia = "1"
 ArraysOfArrays = "0.3, 0.4"
 PyCall = "1.9"
-Tables = "0.2"
 TypedTables = "1.1"
+Tables = "0.2, 1.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
