--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
-ArraysOfArrays = "0.3, 0.4, 0.5"
+ArraysOfArrays = "0.3, 0.4, 0.5, 0.6"
 PyCall = "1.9"
 StatsBase = "0.32, 0.33"
 Tables = "0.2, 1"
