--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,19 +1,10 @@
-name = "UpROOT"
-uuid = "69ce31c6-c38d-56c2-aa87-409d3de9f997"
-version = "0.3.2"
-
 [deps]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
-
-[compat]
-ArraysOfArrays = "0.3, 0.4, 0.5, 0.6"
-PyCall = "1.9"
-StatsBase = "0.32, 0.33"
-Tables = "0.2, 1"
-TypedTables = "1.1"
-julia = "1.6"
