--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 [compat]
 ArraysOfArrays = "0.3, 0.4, 0.5, 0.6"
 PyCall = "1.9"
-StatsBase = "0.32, 0.33"
+StatsBase = "0.32, 0.33, 0.34"
 Tables = "0.2, 1"
 TypedTables = "1.1"
 julia = "1.6"
